# KooKooha

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  docker-compose.yml  env. example  index.html  main.js  makefile  pyproject.toml  pytest.ini  requirements.txt  styles.css
app/: auth.py  config.py  database.py  main.py  models.py
app/routes/: __init__.py  admin.py  auth.py  organizations.py  payments.py  responses.py  scheduler.py  surveys.py
app/scripts/: __init__.py  seed_data.py
app/services/: analytics_service.py  email_service.py  payment_service.py  survey_service.py  team_import.py
docs/: DEPLOYMENT.md  ENDPOINTS.md  ENVIRONMENT.md
frontend/: index.html  main.js  styles.css
tests/: __init__.py  conftest.py  test_auth.py
